feat(responsive): add responsive layout
add responsive layout from 320 up to 1280 px
and add header to check how it works

--- a/assets/scss/globals/_typography.scss
+++ b/assets/scss/globals/_typography.scss
@@ -1,7 +1,14 @@
+@use "../variables" as variables;
+
+/* Text color */
+body {
+    color: variables.$white;
+}
 
 
 /* Links */
 a, a:link, a:visited  {
+    color: variables.$white;
     text-decoration: none;
 }
 
