fix(dimensions) convert px to rem
height is in pixels need be converted to rems

--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -4,7 +4,7 @@
 .header {
 
     &__menu {
-        height: 66px;
+        height: 4.125rem; // 66px
         // display: flex;
         // justify-content: center; // align center desktop nav
 
