--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -36,14 +36,30 @@ body {
 
     }
 
+    &--pt {
+        padding-top: 1.5rem; // 24px; 
+    }
+    &--pr {
+        padding-right: 1.5rem; // 24px; 
+    }
+    &--pb {
+        padding-bottom: 1.5rem; // 24px; 
+    }
+    &--pl {
+        padding-left: 1.5rem; // 24px; 
+    }
+
     
 }
 
 .grid {
     display: grid;
-    grid-template-columns: [left] 3fr [main] 5fr [right] 1fr [end];
-    grid-template-rows: [navigation] min-content [hero] min-content [end];
+    grid-template-columns: [left] 0 [main] 5fr [right] 0 [end];
+    grid-template-rows: [navigation] min-content [photo] min-content [separate-margin] 2rem [hero] min-content [separate-margin] 5.875rem [end];
 
+    @include breakpoint-up("xl") {
+        grid-template-columns: [left] 3fr [main] 5fr [right] 1fr [end];
+    }
 
     &--left-column {
         grid-column-start: left;
@@ -60,6 +76,9 @@ body {
     }
     &--hero-row {
         grid-row-start: hero;
+    }
+    &--photo-row {
+        grid-row-start: photo;
     }
 }
 
