--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -146,11 +146,28 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.container--pt {
+  padding-top: 1.5rem;
+}
+.container--pr {
+  padding-right: 1.5rem;
+}
+.container--pb {
+  padding-bottom: 1.5rem;
+}
+.container--pl {
+  padding-left: 1.5rem;
+}
 
 .grid {
   display: grid;
-  grid-template-columns: [left] 3fr [main] 5fr [right] 1fr [end];
-  grid-template-rows: [navigation] min-content [hero] min-content [end];
+  grid-template-columns: [left] 0 [main] 5fr [right] 0 [end];
+  grid-template-rows: [navigation] min-content [photo] min-content [separate-margin] 2rem [hero] min-content [separate-margin] 5.875rem [end];
+}
+@media (min-width: 64em) {
+  .grid {
+    grid-template-columns: [left] 3fr [main] 5fr [right] 1fr [end];
+  }
 }
 .grid--left-column {
   grid-column-start: left;
@@ -166,6 +183,9 @@ body {
 }
 .grid--hero-row {
   grid-row-start: hero;
+}
+.grid--photo-row {
+  grid-row-start: photo;
 }
 
 @media (max-width: 63.99875em) {
@@ -212,25 +232,22 @@ body {
     position: absolute;
   }
 }
-.humburger__menu {
-  height: 100%;
-  display: flex;
-  justify-content: end;
-  align-items: center;
+.navigation__humburger-menu {
+  justify-self: end;
 }
 
-.humburger__menu__button {
+.navigation__humburger-menu__button {
   cursor: pointer;
   width: 1.5rem;
 }
 
-.humburger__menu__button > span {
+.navigation__humburger-menu__button > span {
   display: block;
   height: 2px;
   background-color: #ffffff;
 }
 
-.humburger__menu__button > span:not(:last-child) {
+.navigation__humburger-menu__button > span:not(:last-child) {
   margin-bottom: 6px;
 }
 
@@ -246,8 +263,16 @@ body {
   }
 }
 .hero__content--photo-column {
-  padding-left: 10%;
   z-index: 2;
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 64em) {
+  .hero__content--photo-column {
+    grid-column-start: left;
+    grid-row-start: hero;
+    padding-left: 10%;
+  }
 }
 .hero__content--main-column {
   flex: 3;
@@ -255,17 +280,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 600px;
-  margin-left: 0;
 }
 @media (min-width: 64em) {
   .hero__content--main-column {
-    margin-left: 3%;
+    padding: 0 30px;
   }
 }
 .hero__ribbon--wrapper {
   grid-column-start: left;
-  grid-row-start: hero;
+  grid-row-start: navigation;
   position: absolute;
   z-index: 1;
   top: 0rem;
@@ -280,37 +303,35 @@ body {
 }
 @media (min-width: 48em) {
   .hero__ribbon--wrapper {
-    top: -4.125rem;
-    height: 261px;
+    height: 294px;
   }
 }
 @media (min-width: 64em) {
   .hero__ribbon--wrapper {
-    height: 128%;
+    height: 106%;
     width: 8%;
   }
 }
 @media (min-width: 80em) {
   .hero__ribbon--wrapper {
-    height: 128%;
+    height: 106%;
   }
 }
 .hero__ribbon--color {
   background-color: #119199;
   border-bottom-right-radius: 50px;
-  width: 99%;
-  height: 100%;
+  height: 94%;
 }
 .hero__photo {
   min-width: 186px;
-  max-width: 430px;
-  margin-bottom: 48px;
+  max-width: 240px;
   width: 100%;
 }
 @media (min-width: 64em) {
   .hero__photo {
     justify-content: end;
     margin-bottom: 0;
+    max-width: 384px;
   }
 }
 .hero__name > p {
