--- a/assets/scss/globals/_typography.scss
+++ b/assets/scss/globals/_typography.scss
@@ -1,9 +1,23 @@
 @use "../variables" as variables;
+@use "../mixins" as mixin;
 
 /* Text color */
 body {
     color: variables.$white;
     font-family:  Arial, sans-serif;
+}
+
+h2 {
+    font-size: 22px;
+    
+
+    @include mixin.breakpoint-up(md){
+        font-size: 40px;
+    }
+
+    @include mixin.breakpoint-up(lg){
+        font-size: 48px;
+    }
 }
 
 
