--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,8 +2,10 @@
 @import "mixins";
 
 @import "globals";
-
 @import "containers";
+@import "design-elements";
+
 @import "header";
 @import "hero";
+@import "skills";
 
