--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -3,6 +3,12 @@
 
 .header {
     position: relative;
+    margin-bottom: 50px;
+
+    @include mixin.breakpoint-up("xl") {
+        margin-bottom: 94px;
+    }
+    
 }
 
 .header-menu {
