--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -84,6 +84,11 @@ body {
     }
 }
 
+.skill-progress-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content repeat(9);
+}
 
 // hide desktop menu
 .hide-for-mobile {
