--- a/assets/scss/_skills.scss
+++ b/assets/scss/_skills.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
 
-    margin-bottom: 50px;
+    margin-bottom: 36px;
 
     @include breakpoint-up("md"){
         height: 105px;
@@ -52,11 +52,28 @@
 }
 
 
+.skill-flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 22px;
+
+    & > .skill-name {
+        font-size: 10px;
+
+        
+    }
+
+}
 .progress {
     position: relative;
+
     height: 50px;
     width: 50px;
 
+    margin-bottom: 8px;
+    
     &-outer {
         position: absolute;
 
