--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -134,6 +134,17 @@ a:hover {
   text-decoration: none;
 }
 
+.invisible {
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+  transition: 0.7s ease;
+}
+
 body {
   display: flex;
   justify-content: center;
