--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -221,7 +221,6 @@ body {
 .skill-progress-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: min-content repeat(9);
 }
 
 @media (max-width: 63.99875em) {
@@ -510,8 +509,13 @@ body {
   margin-bottom: 22px;
 }
 
-.skill-name, .skill-note {
-  font-size: 10px;
+.progress-number, .progress-percentage, .skill-name, .skill-note {
+  font-size: 12px;
+}
+@media (min-width: 36em) {
+  .progress-number, .progress-percentage, .skill-name, .skill-note {
+    font-size: 16px;
+  }
 }
 
 .skill-note {
@@ -520,8 +524,8 @@ body {
 
 .progress {
   position: relative;
-  height: 50px;
-  width: 50px;
+  height: 86px;
+  width: 86px;
   margin-bottom: 8px;
 }
 .progress-outer {
@@ -529,8 +533,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
-  width: 50px;
+  height: 86px;
+  width: 86px;
   border-radius: 50%;
   background-color: #20456F;
   box-shadow: 3px 3px 3px -1px rgba(0, 0, 0, 0.5), -1px -1px 2px -1px rgba(0, 0, 0, 0.7);
@@ -539,20 +543,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30px;
-  width: 30px;
+  height: 54px;
+  width: 54px;
   border-radius: 50%;
   background-color: #342C3C;
   box-shadow: inset 3px 3px 3px -1px rgba(0, 0, 0, 0.6), inset -1px -1px 2px -1px rgba(0, 0, 0, 0.55);
-}
-.progress-number, .progress-percentage {
-  font-size: 8px;
 }
 .progress-stroke {
   position: absolute;
   fill: none;
   stroke: #119199;
-  stroke-width: 7px;
-  stroke-dasharray: 128;
-  stroke-dashoffset: 127;
+  stroke-width: 10px;
+  stroke-dasharray: 230;
+  stroke-dashoffset: 229;
 }/*# sourceMappingURL=style.css.map */
