refactor(skills): backup before refactor structure
need backup files before huge structure refactoring

--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -98,6 +98,15 @@ body {
     
 }
 
+// hide desktop menu
+.hide-for-medium {
+    
+    @include breakpoint-down("md"){
+        display: none;
+    }
+    
+}
+
 // hide humburger menu
 .hide-for-desktop {
     height: 100%;
