--- a/assets/scss/_skills.scss
+++ b/assets/scss/_skills.scss
@@ -62,7 +62,13 @@
     @include breakpoint-up("md") {
         flex-direction: row;
         justify-content: space-between;
-        padding: 0 16px;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    @include breakpoint-up("lg") {
+        flex-direction: column;
+        align-items: start;
     }
 }
 
@@ -84,15 +90,18 @@
 }
 
 .progress {
-    position: relative;
 
-    height: 86px;
-    width: 86px;
+    &-circle {
+        position: relative;
 
-    margin-bottom: 8px;
+        height: 86px;
+        width: 86px;
 
-    @include breakpoint-up("md"){
-        order: 2;
+        margin-bottom: 8px;
+
+        @include breakpoint-up("md"){
+            order: 2;
+        }
     }
     
     &-outer {
@@ -137,5 +146,54 @@
         stroke-dasharray: 230; 
         stroke-dashoffset: 229; 
     }
+
+    &-bar {
+        order: 2;
+        display: flex;
+        align-items: center;
+
+        &-outer {
+            position: absolute;
+            display: flex;
+    
+            height: 6px;
+            width: 100%;
+            border-radius: 6px;
+    
+            background-color: $blue-dark;
+    
+            box-shadow: 3px 3px 3px -1px rgba(0,0,0, 0.50),
+                        -1px -1px 2px -1px rgba(0,0,0, 0.70);
+
+        }
+
+        &-inner {
+        position: absolute;
+        display: flex;
+        
+
+        height: 4px;
+        width: 50%;
+        border-radius: 4px;
+        
+        background-color: $turquoise;
+
+        }
+    }
 }
 
+
+
+
+.hide-progress-circle {
+    @include breakpoint-up("lg"){
+        display: none;
+    }
+}
+
+// hide bar
+.hide-progress-bar {
+    @include breakpoint-down("md"){
+        display: none;
+    }
+}
