--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -229,6 +229,12 @@ body {
   }
 }
 
+@media (max-width: 47.99875em) {
+  .hide-for-medium {
+    display: none;
+  }
+}
+
 .hide-for-desktop {
   height: 100%;
   display: block;
@@ -512,7 +518,14 @@ body {
   .skill-flex-container {
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 16px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
+@media (min-width: 48em) {
+  .skill-flex-container {
+    flex-direction: column;
+    align-items: start;
   }
 }
 
@@ -534,14 +547,14 @@ body {
   margin: 20px 0 42px;
 }
 
-.progress {
+.progress-circle {
   position: relative;
   height: 86px;
   width: 86px;
   margin-bottom: 8px;
 }
 @media (min-width: 36em) {
-  .progress {
+  .progress-circle {
     order: 2;
   }
 }
@@ -573,4 +586,38 @@ body {
   stroke-width: 10px;
   stroke-dasharray: 230;
   stroke-dashoffset: 229;
+}
+.progress-bar {
+  order: 2;
+  display: flex;
+  align-items: center;
+}
+.progress-bar-outer {
+  position: absolute;
+  display: flex;
+  height: 6px;
+  width: 100%;
+  border-radius: 6px;
+  background-color: #20456F;
+  box-shadow: 3px 3px 3px -1px rgba(0, 0, 0, 0.5), -1px -1px 2px -1px rgba(0, 0, 0, 0.7);
+}
+.progress-bar-inner {
+  position: absolute;
+  display: flex;
+  height: 4px;
+  width: 50%;
+  border-radius: 4px;
+  background-color: #119199;
+}
+
+@media (min-width: 48em) {
+  .hide-progress-circle {
+    display: none;
+  }
+}
+
+@media (max-width: 47.99875em) {
+  .hide-progress-bar {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
